Add WorkItem cancellation
